Improve utility function.